--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -2,15 +2,15 @@
 #cacheUrl: https://ehsanedalat.github.io/news/cache.json
 sources:
   - href: https://portswigger.net/daily-swig/rss
-  - href: https://feeds.feedburner.com/TheHackersNews
-  - href: https://feeds.feedburner.com/securityweek
-  - href: https://www.cisa.gov/uscert/ncas/alerts.xml
-  - href: https://www.cisa.gov/uscert/ncas/analysis-reports.xml
-  - href: https://www.cisa.gov/uscert/ncas/bulletins.xml
-  - href: https://www.cisa.gov/uscert/ncas/current-activity.xml
-  - href: https://www.darkreading.com/rss.xml
-  - href: https://www.kb.cert.org/vuls/atomfeed/
-  - href: https://insights.sei.cmu.edu/blog/feeds/topic/certcc/atom/
-  - href: https://msrc-blog.microsoft.com/feed/
-  - href: https://www.schneier.com/feed/atom
-  - href: https://ubuntu.com/security/notices/rss.xml
+#  - href: https://feeds.feedburner.com/TheHackersNews
+#  - href: https://feeds.feedburner.com/securityweek
+#  - href: https://www.cisa.gov/uscert/ncas/alerts.xml
+#  - href: https://www.cisa.gov/uscert/ncas/analysis-reports.xml
+#  - href: https://www.cisa.gov/uscert/ncas/bulletins.xml
+#  - href: https://www.cisa.gov/uscert/ncas/current-activity.xml
+#  - href: https://www.darkreading.com/rss.xml
+#  - href: https://www.kb.cert.org/vuls/atomfeed/
+#  - href: https://insights.sei.cmu.edu/blog/feeds/topic/certcc/atom/
+#  - href: https://msrc-blog.microsoft.com/feed/
+#  - href: https://www.schneier.com/feed/atom
+#  - href: https://ubuntu.com/security/notices/rss.xml
